# ha-intervals-icu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL_BETA7.txt  LICENSE  README-FEAT-001.txt  README.fr.md  README.md  README.txt  RELEASE_NOTES.md  RELEASE_NOTES_v2.0.0-beta7.md  ROADMAP.md  VISION.md  apply_feat001.py  hacs.json  package-lock.json  pyproject.toml  quality_scale.yaml
.github/: FUNDING.yml
.github/workflows/: validate.yml
custom_components/ha_intervals_icu/: __init__.py  activities.py  advanced_statistics.py  api.py  binary_sensor.py  config_flow.py  (+18 more)
docs/: lovelace-card.md
frontend/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
ha_intervals_icu/: activities.py  activity_statistics.py  advanced_statistics.py  binary_sensor.py  config_flow.py  coordinator.py  device.py  manifest.json  records.py  repairs.py  sensor.py  statistics.py
tests/: __init__.py  conftest.py  test_about_metadata_beta8.py  test_activities.py  test_api.py  test_atlas_coach.py  test_atlas_coordinator.py  test_atlas_dashboard_frontend.py  test_atlas_engine.py  test_atlas_readiness.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_dashboard.py  test_dashboard_sensor.py  test_history.py  test_init.py  test_records.py  test_statistics.py  test_statistics_beta10.py  test_statistics_beta2.py  test_statistics_beta4.py  test_statistics_beta5.py  test_statistics_card_athlete_selector.py  test_support_logos_beta9.py  test_training_status_sensor.py  test_wellness_statistics_beta7.py  test_wellness_stats_beta6.py  test_workouts.py
(+35 files in other folders)
